// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`карточка: status === OK: если есть оффер и кол-во 1, вернет правильный результат 1`] = `
Object {
  "key": "Впервые на Авто.ру",
}
`;

exports[`карточка: status === OK: если есть оффер и кол-во не 1, вернет правильный результат 1`] = `
Object {
  "key": "Ещё 2 размещения на Авто.ру",
}
`;

exports[`карточка: status === OK: если нет оффера и есть кол-во, вернет правильный результат 1`] = `
Object {
  "key": "2 размещения на Авто.ру",
}
`;

exports[`отчет: status === ERROR: вернет флаг для удаления данных 1`] = `
Object {
  "field": "autoru_offers",
  "status": "REMOVE",
}
`;

exports[`отчет: status === OK: если есть оффер и кол-во 1, вернет правильный результат 1`] = `
Object {
  "key": "Размещения на Авто.ру",
  "value": "Впервые на Авто.ру",
}
`;

exports[`отчет: status === OK: если есть оффер и кол-во не 1, вернет правильный результат 1`] = `
Object {
  "key": "Размещения на Авто.ру",
  "value": "Ещё 2 объявления",
}
`;

exports[`отчет: status === OK: если нет оффера и есть кол-во, вернет правильный результат 1`] = `
Object {
  "key": "Размещения на Авто.ру",
  "value": "2 объявления",
}
`;

exports[`отчет: status === OK: если нет оффера и нет кол-ва, вернет флаг для удаления данных 1`] = `
Object {
  "field": "autoru_offers",
  "status": "REMOVE",
}
`;
